[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/lvl_btn.gd" type="Script" id=1]

[node name="LvlBtn" type="Button"]
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
rect_pivot_offset = Vector2( 100, 75 )
text = "Level 1"
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_LvlBtn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LvlBtn_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_LvlBtn_pressed"]
